# FlashDir

./: .gitignore  LICENSE  README.md  pyproject.toml
src/core/: __init__.py  config.py
src/core/getip/: __init__.py  _getip.py
src/core/socket_fabric/: __init__.py  _sockfabric.py
utils/setup_paths/: poetry_paths.py  subprocess_setup_paths.py  vars.py
