[project]
name = "flashdir"
version = "0.0.1"
description = "Simple project for my practice. Copies files from folder on the computer and transit them into another pc."
authors = [
    {name = "JOXWORK",email = "joxwork1995@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
